# wildly-distributed-wasm

./: .gitignore  Makefile  README.md
.github/workflows/: dist-kv.yml  template.yml
config/: aws.json  azure.json  gcp.json
dist-kv/: Cargo.toml  README.md  wasmcloud.toml
dist-kv/src/: lib.rs
todo/: Cargo.toml  Makefile  wasmcloud.toml
todo/src/: lib.rs
ui/: Cargo.toml  README.md  lib.rs  package.json  wasmcloud.toml
ui/src/: App.js
ui/src/components/: AddTask.js  tasks.js
wild-wasm-interface/: README.md  codegen.toml  ui.smithy
wild-wasm-interface/rust/: Cargo.toml  README.md
wild-wasm-interface/rust/src/: lib.rs  wildwasm.rs
