[package]
name = "dist-kv"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "dist_kv"

[dependencies]
futures = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.86"
wasmbus-rpc = "0.10"
wasmcloud-interface-messaging = "0.7"
wasmcloud-interface-keyvalue = "0.8"
wasmcloud-interface-logging = "0.7"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
