[package]
authors = [
  "Cosmonic Team",
]
edition = "2021"
name = "todo"
version = "0.1.1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.41"
async-trait = "0.1"
futures = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_bytes = "0.11"
serde_json = "1.0"
wasmbus-rpc = "0.10.1"
wasmcloud-interface-httpserver = "0.7.0"
wasmcloud-interface-keyvalue = "0.8.0"
wasmcloud-interface-messaging = "0.7.0"
wasmcloud-interface-logging = "0.7.0"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
